编译原理实验/实验7/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> LP query RP
Rule 3     select -> SELECT list FROM table WHERE lst ORDER BY list
Rule 4     select -> SELECT list FROM table WHERE lst
Rule 5     select -> SELECT list FROM table ORDER BY list
Rule 6     select -> SELECT list FROM table
Rule 7     table -> NAME
Rule 8     table -> LP query RP
Rule 9     table -> table COMMA table
Rule 10    lst -> condition
Rule 11    lst -> condition AND condition
Rule 12    lst -> condition OR condition
Rule 13    lst -> NAME BETWEEN NUMBER AND NUMBER
Rule 14    lst -> NAME IN LP query RP
Rule 15    lst -> NAME literals agg
Rule 16    lst -> agg literals NUMBER
Rule 17    condition -> NAME cmp NUMBER
Rule 18    agg -> SUM LP NAME RP
Rule 19    agg -> AVG LP NAME RP
Rule 20    agg -> COUNT LP NAME RP
Rule 21    agg -> MIN LP NAME RP
Rule 22    agg -> MAX LP NAME RP
Rule 23    list -> STAR
Rule 24    list -> NAME
Rule 25    list -> NAME DOT NAME
Rule 26    list -> list COMMA list
Rule 27    list -> list AND NAME
Rule 28    list -> list OR NAME
Rule 29    list -> NAME AS NAME
Rule 30    list -> list AS NAME
Rule 31    list -> agg

Terminals, with rules where they appear

AND                  : 11 13 27
AS                   : 29 30
AVG                  : 19
BETWEEN              : 13
BY                   : 3 5
COMMA                : 9 26
COUNT                : 20
DOT                  : 25
FROM                 : 3 4 5 6
IN                   : 14
LP                   : 2 8 14 18 19 20 21 22
MAX                  : 22
MIN                  : 21
NAME                 : 7 13 14 15 17 18 19 20 21 22 24 25 25 27 28 29 29 30
NUMBER               : 13 13 16 17
OR                   : 12 28
ORDER                : 3 5
RP                   : 2 8 14 18 19 20 21 22
SELECT               : 3 4 5 6
STAR                 : 23
SUM                  : 18
WHERE                : 3 4
cmp                  : 17
error                : 
literals             : 15 16

Nonterminals, with rules where they appear

agg                  : 15 16 31
condition            : 10 11 11 12 12
list                 : 3 3 4 5 5 6 26 26 27 28 30
lst                  : 3 4
query                : 2 8 14 0
select               : 1
table                : 3 4 5 6 9 9

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 1
    select                         shift and go to state 2

state 1

    (0) S' -> query .



state 2

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)
    RP              reduce using rule 1 (query -> select .)


state 3

    (2) query -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 5
    select                         shift and go to state 2

state 4

    (3) select -> SELECT . list FROM table WHERE lst ORDER BY list
    (4) select -> SELECT . list FROM table WHERE lst
    (5) select -> SELECT . list FROM table ORDER BY list
    (6) select -> SELECT . list FROM table
    (23) list -> . STAR
    (24) list -> . NAME
    (25) list -> . NAME DOT NAME
    (26) list -> . list COMMA list
    (27) list -> . list AND NAME
    (28) list -> . list OR NAME
    (29) list -> . NAME AS NAME
    (30) list -> . list AS NAME
    (31) list -> . agg
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    STAR            shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 6
    agg                            shift and go to state 9

state 5

    (2) query -> LP query . RP

    RP              shift and go to state 15


state 6

    (3) select -> SELECT list . FROM table WHERE lst ORDER BY list
    (4) select -> SELECT list . FROM table WHERE lst
    (5) select -> SELECT list . FROM table ORDER BY list
    (6) select -> SELECT list . FROM table
    (26) list -> list . COMMA list
    (27) list -> list . AND NAME
    (28) list -> list . OR NAME
    (30) list -> list . AS NAME

    FROM            shift and go to state 16
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    AS              shift and go to state 20


state 7

    (23) list -> STAR .

    FROM            reduce using rule 23 (list -> STAR .)
    COMMA           reduce using rule 23 (list -> STAR .)
    AND             reduce using rule 23 (list -> STAR .)
    OR              reduce using rule 23 (list -> STAR .)
    AS              reduce using rule 23 (list -> STAR .)
    $end            reduce using rule 23 (list -> STAR .)
    RP              reduce using rule 23 (list -> STAR .)


state 8

    (24) list -> NAME .
    (25) list -> NAME . DOT NAME
    (29) list -> NAME . AS NAME

  ! shift/reduce conflict for AS resolved as shift
    FROM            reduce using rule 24 (list -> NAME .)
    COMMA           reduce using rule 24 (list -> NAME .)
    AND             reduce using rule 24 (list -> NAME .)
    OR              reduce using rule 24 (list -> NAME .)
    $end            reduce using rule 24 (list -> NAME .)
    RP              reduce using rule 24 (list -> NAME .)
    DOT             shift and go to state 21
    AS              shift and go to state 22

  ! AS              [ reduce using rule 24 (list -> NAME .) ]


state 9

    (31) list -> agg .

    FROM            reduce using rule 31 (list -> agg .)
    COMMA           reduce using rule 31 (list -> agg .)
    AND             reduce using rule 31 (list -> agg .)
    OR              reduce using rule 31 (list -> agg .)
    AS              reduce using rule 31 (list -> agg .)
    $end            reduce using rule 31 (list -> agg .)
    RP              reduce using rule 31 (list -> agg .)


state 10

    (18) agg -> SUM . LP NAME RP

    LP              shift and go to state 23


state 11

    (19) agg -> AVG . LP NAME RP

    LP              shift and go to state 24


state 12

    (20) agg -> COUNT . LP NAME RP

    LP              shift and go to state 25


state 13

    (21) agg -> MIN . LP NAME RP

    LP              shift and go to state 26


state 14

    (22) agg -> MAX . LP NAME RP

    LP              shift and go to state 27


state 15

    (2) query -> LP query RP .

    $end            reduce using rule 2 (query -> LP query RP .)
    RP              reduce using rule 2 (query -> LP query RP .)


state 16

    (3) select -> SELECT list FROM . table WHERE lst ORDER BY list
    (4) select -> SELECT list FROM . table WHERE lst
    (5) select -> SELECT list FROM . table ORDER BY list
    (6) select -> SELECT list FROM . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . table COMMA table

    NAME            shift and go to state 29
    LP              shift and go to state 30

    table                          shift and go to state 28

state 17

    (26) list -> list COMMA . list
    (23) list -> . STAR
    (24) list -> . NAME
    (25) list -> . NAME DOT NAME
    (26) list -> . list COMMA list
    (27) list -> . list AND NAME
    (28) list -> . list OR NAME
    (29) list -> . NAME AS NAME
    (30) list -> . list AS NAME
    (31) list -> . agg
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    STAR            shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 31
    agg                            shift and go to state 9

state 18

    (27) list -> list AND . NAME

    NAME            shift and go to state 32


state 19

    (28) list -> list OR . NAME

    NAME            shift and go to state 33


state 20

    (30) list -> list AS . NAME

    NAME            shift and go to state 34


state 21

    (25) list -> NAME DOT . NAME

    NAME            shift and go to state 35


state 22

    (29) list -> NAME AS . NAME

    NAME            shift and go to state 36


state 23

    (18) agg -> SUM LP . NAME RP

    NAME            shift and go to state 37


state 24

    (19) agg -> AVG LP . NAME RP

    NAME            shift and go to state 38


state 25

    (20) agg -> COUNT LP . NAME RP

    NAME            shift and go to state 39


state 26

    (21) agg -> MIN LP . NAME RP

    NAME            shift and go to state 40


state 27

    (22) agg -> MAX LP . NAME RP

    NAME            shift and go to state 41


state 28

    (3) select -> SELECT list FROM table . WHERE lst ORDER BY list
    (4) select -> SELECT list FROM table . WHERE lst
    (5) select -> SELECT list FROM table . ORDER BY list
    (6) select -> SELECT list FROM table .
    (9) table -> table . COMMA table

    WHERE           shift and go to state 42
    ORDER           shift and go to state 43
    $end            reduce using rule 6 (select -> SELECT list FROM table .)
    RP              reduce using rule 6 (select -> SELECT list FROM table .)
    COMMA           shift and go to state 44


state 29

    (7) table -> NAME .

    WHERE           reduce using rule 7 (table -> NAME .)
    ORDER           reduce using rule 7 (table -> NAME .)
    COMMA           reduce using rule 7 (table -> NAME .)
    $end            reduce using rule 7 (table -> NAME .)
    RP              reduce using rule 7 (table -> NAME .)


state 30

    (8) table -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 45
    select                         shift and go to state 2

state 31

    (26) list -> list COMMA list .
    (26) list -> list . COMMA list
    (27) list -> list . AND NAME
    (28) list -> list . OR NAME
    (30) list -> list . AS NAME

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AS resolved as shift
    FROM            reduce using rule 26 (list -> list COMMA list .)
    $end            reduce using rule 26 (list -> list COMMA list .)
    RP              reduce using rule 26 (list -> list COMMA list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    AS              shift and go to state 20

  ! COMMA           [ reduce using rule 26 (list -> list COMMA list .) ]
  ! AND             [ reduce using rule 26 (list -> list COMMA list .) ]
  ! OR              [ reduce using rule 26 (list -> list COMMA list .) ]
  ! AS              [ reduce using rule 26 (list -> list COMMA list .) ]


state 32

    (27) list -> list AND NAME .

    FROM            reduce using rule 27 (list -> list AND NAME .)
    COMMA           reduce using rule 27 (list -> list AND NAME .)
    AND             reduce using rule 27 (list -> list AND NAME .)
    OR              reduce using rule 27 (list -> list AND NAME .)
    AS              reduce using rule 27 (list -> list AND NAME .)
    $end            reduce using rule 27 (list -> list AND NAME .)
    RP              reduce using rule 27 (list -> list AND NAME .)


state 33

    (28) list -> list OR NAME .

    FROM            reduce using rule 28 (list -> list OR NAME .)
    COMMA           reduce using rule 28 (list -> list OR NAME .)
    AND             reduce using rule 28 (list -> list OR NAME .)
    OR              reduce using rule 28 (list -> list OR NAME .)
    AS              reduce using rule 28 (list -> list OR NAME .)
    $end            reduce using rule 28 (list -> list OR NAME .)
    RP              reduce using rule 28 (list -> list OR NAME .)


state 34

    (30) list -> list AS NAME .

    FROM            reduce using rule 30 (list -> list AS NAME .)
    COMMA           reduce using rule 30 (list -> list AS NAME .)
    AND             reduce using rule 30 (list -> list AS NAME .)
    OR              reduce using rule 30 (list -> list AS NAME .)
    AS              reduce using rule 30 (list -> list AS NAME .)
    $end            reduce using rule 30 (list -> list AS NAME .)
    RP              reduce using rule 30 (list -> list AS NAME .)


state 35

    (25) list -> NAME DOT NAME .

    FROM            reduce using rule 25 (list -> NAME DOT NAME .)
    COMMA           reduce using rule 25 (list -> NAME DOT NAME .)
    AND             reduce using rule 25 (list -> NAME DOT NAME .)
    OR              reduce using rule 25 (list -> NAME DOT NAME .)
    AS              reduce using rule 25 (list -> NAME DOT NAME .)
    $end            reduce using rule 25 (list -> NAME DOT NAME .)
    RP              reduce using rule 25 (list -> NAME DOT NAME .)


state 36

    (29) list -> NAME AS NAME .

    FROM            reduce using rule 29 (list -> NAME AS NAME .)
    COMMA           reduce using rule 29 (list -> NAME AS NAME .)
    AND             reduce using rule 29 (list -> NAME AS NAME .)
    OR              reduce using rule 29 (list -> NAME AS NAME .)
    AS              reduce using rule 29 (list -> NAME AS NAME .)
    $end            reduce using rule 29 (list -> NAME AS NAME .)
    RP              reduce using rule 29 (list -> NAME AS NAME .)


state 37

    (18) agg -> SUM LP NAME . RP

    RP              shift and go to state 46


state 38

    (19) agg -> AVG LP NAME . RP

    RP              shift and go to state 47


state 39

    (20) agg -> COUNT LP NAME . RP

    RP              shift and go to state 48


state 40

    (21) agg -> MIN LP NAME . RP

    RP              shift and go to state 49


state 41

    (22) agg -> MAX LP NAME . RP

    RP              shift and go to state 50


state 42

    (3) select -> SELECT list FROM table WHERE . lst ORDER BY list
    (4) select -> SELECT list FROM table WHERE . lst
    (10) lst -> . condition
    (11) lst -> . condition AND condition
    (12) lst -> . condition OR condition
    (13) lst -> . NAME BETWEEN NUMBER AND NUMBER
    (14) lst -> . NAME IN LP query RP
    (15) lst -> . NAME literals agg
    (16) lst -> . agg literals NUMBER
    (17) condition -> . NAME cmp NUMBER
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    NAME            shift and go to state 53
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    lst                            shift and go to state 51
    condition                      shift and go to state 52
    agg                            shift and go to state 54

state 43

    (5) select -> SELECT list FROM table ORDER . BY list

    BY              shift and go to state 55


state 44

    (9) table -> table COMMA . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . table COMMA table

    NAME            shift and go to state 29
    LP              shift and go to state 30

    table                          shift and go to state 56

state 45

    (8) table -> LP query . RP

    RP              shift and go to state 57


state 46

    (18) agg -> SUM LP NAME RP .

    FROM            reduce using rule 18 (agg -> SUM LP NAME RP .)
    COMMA           reduce using rule 18 (agg -> SUM LP NAME RP .)
    AND             reduce using rule 18 (agg -> SUM LP NAME RP .)
    OR              reduce using rule 18 (agg -> SUM LP NAME RP .)
    AS              reduce using rule 18 (agg -> SUM LP NAME RP .)
    $end            reduce using rule 18 (agg -> SUM LP NAME RP .)
    RP              reduce using rule 18 (agg -> SUM LP NAME RP .)
    literals        reduce using rule 18 (agg -> SUM LP NAME RP .)
    ORDER           reduce using rule 18 (agg -> SUM LP NAME RP .)


state 47

    (19) agg -> AVG LP NAME RP .

    FROM            reduce using rule 19 (agg -> AVG LP NAME RP .)
    COMMA           reduce using rule 19 (agg -> AVG LP NAME RP .)
    AND             reduce using rule 19 (agg -> AVG LP NAME RP .)
    OR              reduce using rule 19 (agg -> AVG LP NAME RP .)
    AS              reduce using rule 19 (agg -> AVG LP NAME RP .)
    $end            reduce using rule 19 (agg -> AVG LP NAME RP .)
    RP              reduce using rule 19 (agg -> AVG LP NAME RP .)
    literals        reduce using rule 19 (agg -> AVG LP NAME RP .)
    ORDER           reduce using rule 19 (agg -> AVG LP NAME RP .)


state 48

    (20) agg -> COUNT LP NAME RP .

    FROM            reduce using rule 20 (agg -> COUNT LP NAME RP .)
    COMMA           reduce using rule 20 (agg -> COUNT LP NAME RP .)
    AND             reduce using rule 20 (agg -> COUNT LP NAME RP .)
    OR              reduce using rule 20 (agg -> COUNT LP NAME RP .)
    AS              reduce using rule 20 (agg -> COUNT LP NAME RP .)
    $end            reduce using rule 20 (agg -> COUNT LP NAME RP .)
    RP              reduce using rule 20 (agg -> COUNT LP NAME RP .)
    literals        reduce using rule 20 (agg -> COUNT LP NAME RP .)
    ORDER           reduce using rule 20 (agg -> COUNT LP NAME RP .)


state 49

    (21) agg -> MIN LP NAME RP .

    FROM            reduce using rule 21 (agg -> MIN LP NAME RP .)
    COMMA           reduce using rule 21 (agg -> MIN LP NAME RP .)
    AND             reduce using rule 21 (agg -> MIN LP NAME RP .)
    OR              reduce using rule 21 (agg -> MIN LP NAME RP .)
    AS              reduce using rule 21 (agg -> MIN LP NAME RP .)
    $end            reduce using rule 21 (agg -> MIN LP NAME RP .)
    RP              reduce using rule 21 (agg -> MIN LP NAME RP .)
    literals        reduce using rule 21 (agg -> MIN LP NAME RP .)
    ORDER           reduce using rule 21 (agg -> MIN LP NAME RP .)


state 50

    (22) agg -> MAX LP NAME RP .

    FROM            reduce using rule 22 (agg -> MAX LP NAME RP .)
    COMMA           reduce using rule 22 (agg -> MAX LP NAME RP .)
    AND             reduce using rule 22 (agg -> MAX LP NAME RP .)
    OR              reduce using rule 22 (agg -> MAX LP NAME RP .)
    AS              reduce using rule 22 (agg -> MAX LP NAME RP .)
    $end            reduce using rule 22 (agg -> MAX LP NAME RP .)
    RP              reduce using rule 22 (agg -> MAX LP NAME RP .)
    literals        reduce using rule 22 (agg -> MAX LP NAME RP .)
    ORDER           reduce using rule 22 (agg -> MAX LP NAME RP .)


state 51

    (3) select -> SELECT list FROM table WHERE lst . ORDER BY list
    (4) select -> SELECT list FROM table WHERE lst .

    ORDER           shift and go to state 58
    $end            reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)
    RP              reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)


state 52

    (10) lst -> condition .
    (11) lst -> condition . AND condition
    (12) lst -> condition . OR condition

    ORDER           reduce using rule 10 (lst -> condition .)
    $end            reduce using rule 10 (lst -> condition .)
    RP              reduce using rule 10 (lst -> condition .)
    AND             shift and go to state 59
    OR              shift and go to state 60


state 53

    (13) lst -> NAME . BETWEEN NUMBER AND NUMBER
    (14) lst -> NAME . IN LP query RP
    (15) lst -> NAME . literals agg
    (17) condition -> NAME . cmp NUMBER

    BETWEEN         shift and go to state 61
    IN              shift and go to state 62
    literals        shift and go to state 63
    cmp             shift and go to state 64


state 54

    (16) lst -> agg . literals NUMBER

    literals        shift and go to state 65


state 55

    (5) select -> SELECT list FROM table ORDER BY . list
    (23) list -> . STAR
    (24) list -> . NAME
    (25) list -> . NAME DOT NAME
    (26) list -> . list COMMA list
    (27) list -> . list AND NAME
    (28) list -> . list OR NAME
    (29) list -> . NAME AS NAME
    (30) list -> . list AS NAME
    (31) list -> . agg
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    STAR            shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 66
    agg                            shift and go to state 9

state 56

    (9) table -> table COMMA table .
    (9) table -> table . COMMA table

  ! shift/reduce conflict for COMMA resolved as shift
    WHERE           reduce using rule 9 (table -> table COMMA table .)
    ORDER           reduce using rule 9 (table -> table COMMA table .)
    $end            reduce using rule 9 (table -> table COMMA table .)
    RP              reduce using rule 9 (table -> table COMMA table .)
    COMMA           shift and go to state 44

  ! COMMA           [ reduce using rule 9 (table -> table COMMA table .) ]


state 57

    (8) table -> LP query RP .

    WHERE           reduce using rule 8 (table -> LP query RP .)
    ORDER           reduce using rule 8 (table -> LP query RP .)
    COMMA           reduce using rule 8 (table -> LP query RP .)
    $end            reduce using rule 8 (table -> LP query RP .)
    RP              reduce using rule 8 (table -> LP query RP .)


state 58

    (3) select -> SELECT list FROM table WHERE lst ORDER . BY list

    BY              shift and go to state 67


state 59

    (11) lst -> condition AND . condition
    (17) condition -> . NAME cmp NUMBER

    NAME            shift and go to state 69

    condition                      shift and go to state 68

state 60

    (12) lst -> condition OR . condition
    (17) condition -> . NAME cmp NUMBER

    NAME            shift and go to state 69

    condition                      shift and go to state 70

state 61

    (13) lst -> NAME BETWEEN . NUMBER AND NUMBER

    NUMBER          shift and go to state 71


state 62

    (14) lst -> NAME IN . LP query RP

    LP              shift and go to state 72


state 63

    (15) lst -> NAME literals . agg
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    agg                            shift and go to state 73

state 64

    (17) condition -> NAME cmp . NUMBER

    NUMBER          shift and go to state 74


state 65

    (16) lst -> agg literals . NUMBER

    NUMBER          shift and go to state 75


state 66

    (5) select -> SELECT list FROM table ORDER BY list .
    (26) list -> list . COMMA list
    (27) list -> list . AND NAME
    (28) list -> list . OR NAME
    (30) list -> list . AS NAME

    $end            reduce using rule 5 (select -> SELECT list FROM table ORDER BY list .)
    RP              reduce using rule 5 (select -> SELECT list FROM table ORDER BY list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    AS              shift and go to state 20


state 67

    (3) select -> SELECT list FROM table WHERE lst ORDER BY . list
    (23) list -> . STAR
    (24) list -> . NAME
    (25) list -> . NAME DOT NAME
    (26) list -> . list COMMA list
    (27) list -> . list AND NAME
    (28) list -> . list OR NAME
    (29) list -> . NAME AS NAME
    (30) list -> . list AS NAME
    (31) list -> . agg
    (18) agg -> . SUM LP NAME RP
    (19) agg -> . AVG LP NAME RP
    (20) agg -> . COUNT LP NAME RP
    (21) agg -> . MIN LP NAME RP
    (22) agg -> . MAX LP NAME RP

    STAR            shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 76
    agg                            shift and go to state 9

state 68

    (11) lst -> condition AND condition .

    ORDER           reduce using rule 11 (lst -> condition AND condition .)
    $end            reduce using rule 11 (lst -> condition AND condition .)
    RP              reduce using rule 11 (lst -> condition AND condition .)


state 69

    (17) condition -> NAME . cmp NUMBER

    cmp             shift and go to state 64


state 70

    (12) lst -> condition OR condition .

    ORDER           reduce using rule 12 (lst -> condition OR condition .)
    $end            reduce using rule 12 (lst -> condition OR condition .)
    RP              reduce using rule 12 (lst -> condition OR condition .)


state 71

    (13) lst -> NAME BETWEEN NUMBER . AND NUMBER

    AND             shift and go to state 77


state 72

    (14) lst -> NAME IN LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 78
    select                         shift and go to state 2

state 73

    (15) lst -> NAME literals agg .

    ORDER           reduce using rule 15 (lst -> NAME literals agg .)
    $end            reduce using rule 15 (lst -> NAME literals agg .)
    RP              reduce using rule 15 (lst -> NAME literals agg .)


state 74

    (17) condition -> NAME cmp NUMBER .

    AND             reduce using rule 17 (condition -> NAME cmp NUMBER .)
    OR              reduce using rule 17 (condition -> NAME cmp NUMBER .)
    ORDER           reduce using rule 17 (condition -> NAME cmp NUMBER .)
    $end            reduce using rule 17 (condition -> NAME cmp NUMBER .)
    RP              reduce using rule 17 (condition -> NAME cmp NUMBER .)


state 75

    (16) lst -> agg literals NUMBER .
